infra/k8s/services/go/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: go.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-stable
                port:
                  number: 80
